Fixing webpack config, adding folders inside of src and basic set up of store

--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "pg": "^7.4.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "bugs": {
     "url": "https://github.com/The-North/classroom/issues"
