--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
     "firebase": "^4.11.0",
+    "nodemon": "^1.17.2",
     "pg": "^7.4.1",
     "react": "^15.4.2",
+    "react-cookie": "^2.1.4",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
