--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
     "firebase": "^4.11.0",
