--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
     "jest": "^22.4.2",
     "mocha": "^5.0.4",
