--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai": "^4.1.2",
     "jest": "^22.4.2",
     "mocha": "^5.0.4",
+    "request": "^2.83.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
