--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "firebase": "^4.11.0",
     "grommet": "^1.10.1",
     "node-sass": "^4.7.2",
+    "jsonwebtoken": "^8.2.0",
+    "lodash": "^4.17.5",
     "nodemon": "^1.17.2",
     "pg": "^7.4.1",
     "react": "^15.4.2",
