fix teacher view reducer and lodash dependency

--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ build/Release
 server/config.js
 
 # Dependency directories
-node_modules
+node_modules/
 jspm_packages/
 dist/bundle.js
 package-lock.json
