--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "express": "^4.15.0",
     "firebase": "^4.11.0",
     "grommet": "^1.10.1",
-    "node-sass": "^4.7.2",
     "jsonwebtoken": "^8.2.0",
-    "lodash": "^4.17.5",
+    "lodash.isempty": "^4.4.0",
+    "node-sass": "^4.7.2",
     "nodemon": "^1.17.2",
     "pg": "^7.4.1",
     "react": "^15.4.2",
