--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.15.0",
     "firebase": "^4.11.0",
     "grommet": "^1.10.1",
+    "history": "^4.7.2",
     "jsonwebtoken": "^8.2.0",
     "lodash.isempty": "^4.4.0",
     "node-sass": "^4.7.2",
@@ -49,6 +50,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0",
