--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "history": "^4.7.2",
     "jsonwebtoken": "^8.2.0",
     "lodash.isempty": "^4.4.0",
+    "moment": "^2.21.0",
     "node-sass": "^4.7.2",
     "nodemon": "^1.17.2",
     "pg": "^7.4.1",
