--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^15.4.2",
     "react-cookie": "^2.1.4",
     "react-dom": "^15.4.2",
+    "react-moment": "^0.7.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
