base work for deployment in code

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "css-loader": "^0.28.11",
+    "dotenv": "^5.0.1",
     "express": "^4.15.0",
     "firebase": "^4.11.0",
+    "fs": "0.0.1-security",
     "grommet": "^1.10.1",
     "grommet-addons": "^0.6.0",
     "history": "^4.7.2",
