--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ build/Release
 # Auth key 
 server/config.js
 .env
-server.configAWS.js
+server/configAWS.js
 
 # Dependency directories
 node_modules/
