correct calculations of students grade and averages

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "node-sass": "^4.7.2",
     "nodemon": "^1.17.2",
     "pg": "^7.4.1",
+    "plotly": "^1.0.6",
     "react": "^15.4.2",
     "react-cookie": "^2.1.4",
     "react-dom": "^15.4.2",
